<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.parse.ParseImageView
            android:id="@+id/dishPic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:onClick="dishPicUpload"
            android:scaleType="centerCrop" />

        <EditText
            android:id="@+id/dishName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dishPic"
            android:hint="@string/dishName"
            android:inputType="text"
            android:textColor="@color/textColor"
            android:textColorHint="#808080" >
        </EditText>

        <EditText
            android:id="@+id/editTextAmtSpent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dishName"
            android:layout_toRightOf="@id/dishPic"
            android:hint="@string/amountspent"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:textColorHint="#808080" >
        </EditText>

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup1"
            android:layout_toRightOf="@id/dishPic"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/label_logfooddate"
            android:inputType="date"
            android:singleLine="true"
            android:textColor="@color/textColor" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextAmtSpent"
            android:layout_toRightOf="@id/dishPic"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_meal"
                android:checked="true"
                android:text="@string/meal_radiobtn_logdish"
                android:textColor="@color/textColor" />

            <RadioButton
                android:id="@+id/radio_snack"
                android:text="@string/snack_radiobtn_logdish"
                android:textColor="@color/textColor" />
        </RadioGroup>
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2" >

        <Button
            android:id="@+id/button_clearcart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:text="@string/clearcart"
            android:background="@drawable/green_general_button"
            android:textColor="@drawable/text_general" />

        <Button
            android:id="@+id/logbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:text="@string/logfood"
            android:background="@drawable/green_general_button"
            android:textColor="@drawable/text_general" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bucketTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginBottom="0dip"
            android:layout_marginTop="5dip"
            android:text="@string/label_chosenlist"
            android:textColor="@color/darkColor" />

        <TextView
            android:id="@+id/totalcalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="0dip"
            android:layout_marginTop="5dip"
            android:textColor="@color/darkColor" />
    </GridLayout>

    <ListView
        android:id="@+id/listView_chosen"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>