<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Want to know how we do it? Check our FAQs"
            />

        <WebView
            android:id="@+id/webview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        </WebView>

    </LinearLayout>

    <EditText
        android:id="@+id/feedbackText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/feedback_hint"
        android:inputType="textMultiLine"
        android:textColor="@color/textColor" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView3"
        android:layout_gravity="right" />

    <Button
        android:id="@+id/sndbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/send" />





    <TextView
        android:id="@+id/aboutus_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/about"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/version_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/version" />



</LinearLayout>
