<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="13dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="13dp" >

        <!--<com.facebook.widget.ProfilePictureView-->
            <!--android:id="@+id/userProfilePicture"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center_horizontal"-->
            <!--facebook:preset_size="small"-->
            <!--android:onClick="uploadImage" >-->
        <!--</com.facebook.widget.ProfilePictureView>-->

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="9"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="9"
            android:gravity="center_horizontal"
            android:singleLine="true" />

        <Button
            android:id="@+id/editprofilebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/action_setting1" />

        <TextView
            android:id="@+id/textViewPref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dip"
            android:layout_marginTop="15dip"
            android:text="@string/label_pref"
            android:textColor="@color/darkColor" />

        <GridLayout
            android:id="@+id/gridlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:columnCount="2"
            android:orientation="vertical"
            android:paddingBottom="13dp"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:paddingTop="13dp"
            android:rowCount="4" >

            <TextView
                android:id="@+id/textView_HALAL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|top"
                android:layout_row="0"
                android:gravity="center"
                android:text="@string/label_pref1"
                android:textColor="@color/labelColor" />

            <TextView
                android:id="@+id/textView_veg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_horizontal|top"
                android:layout_row="0"
                android:text="@string/label_pref2"
                android:textColor="@color/labelColor" />

            <TextView
                android:id="@+id/textView_sfd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|top"
                android:layout_row="2"
                android:text="@string/label_pref3"
                android:textColor="@color/labelColor" />

            <TextView
                android:id="@+id/textView_bdgt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_horizontal|top"
                android:layout_row="2"
                android:text="@string/label_pref4"
                android:textColor="@color/labelColor" />

            <EditText
                android:id="@+id/budget_editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_gravity="center_horizontal"
                android:layout_row="3"
                android:cursorVisible="false"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/label_pref5"
                android:inputType="phone"
                android:text="@string/unlimited_budget"
                android:textColor="@color/textColor" >

                <requestFocus />
            </EditText>

            <com.foodingo.activities.model.TriToggleButton
                android:id="@+id/triToggleButton_halal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_gravity="center_horizontal|top"
                android:layout_row="1" >
            </com.foodingo.activities.model.TriToggleButton>

            <com.foodingo.activities.model.TriToggleButton
                android:id="@+id/triToggleButton_sfd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_gravity="center_horizontal|top"
                android:layout_row="3" >
            </com.foodingo.activities.model.TriToggleButton>

            <com.foodingo.activities.model.TriToggleButton
                android:id="@+id/triToggleButton_veg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_gravity="center_horizontal|top"
                android:layout_row="1" />
        </GridLayout>

        <TextView
            android:id="@+id/textView_BMIStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dip"
            android:layout_marginTop="15dip"
            android:text="@string/label_HealthStat"
            android:textColor="@color/darkColor" />
        <!-- For BMI level -->

        <TextView
            android:id="@+id/textViewBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="30"
            android:gravity="center_horizontal"
            android:textColor="@color/darkColor" />

        <TextView
            android:id="@+id/textViewBMIstandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="30"
            android:gravity="center_horizontal"
            android:text="@string/bmi_standard"
            android:textColor="@color/labelColor" />

        <!-- For calorie bank -->

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="30"
            android:gravity="center_horizontal"
            android:textColor="@color/darkColor" />


    </LinearLayout>




</ScrollView>